--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,7 @@ spring.datasource.password=somepassword
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-
-spring.kafka.consumer.bootstrap-servers=localhost:9093
-spring.kafka.consumer.group-id=your_group_id
+spring.kafka.consumer.bootstrap-servers=localhost:19092
+spring.kafka.consumer.group-id=scan_group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.topic.scan=your_kafka_scan_topic
